--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ ul{
 }
 .container{
 	width: 100%;
-	max-width: 600px;
+	max-width: 800px;
 	margin: 0px auto;
 }
 .keyboard{
@@ -40,7 +40,7 @@ ul{
 .keysholder li{
 	float: left;
 	display: block;
-	background: #f2f2f2;
+	background: #9f0000;
 	margin: 4px;
 	padding: 16px 3px;
 	color: #474d5f;
