--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,14 @@ ul{
 .keysholder li{
 	float: left;
 	display: block;
-	background: #9f0000;
+	background: #f2f2f2;
 	margin: 4px;
 	padding: 16px 3px;
 	color: #474d5f;
 	text-align: center;
 	font-size: 16px;
 	border: 5px;
-	border:#f2f2f2;
+	border:#7e0000;
 	border-radius: 5px;
 	cursor: pointer;
 	position: relative;
