--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,9 @@ ul{
 	background: #fff;
 	margin: 4px;
 	padding: 16px 3px;
-	color: #474d5f;
+	color: #790000;
 	text-align: center;
-	font-size: 11px;
+	font-size: 14px;
 	border-radius: 5px;
 	cursor: pointer;
 	position: relative;
